--- a/albaD/style2.css
+++ b/albaD/style2.css
@@ -304,3 +304,83 @@
 
 }
 
+
+
+@media screen and (min-width: 760px) {
+    /* --------------------------------------------------------------------------------------------------------------------------- */
+     /*----------------------------------------------------- Front Page ----------------------------------------------------------- */
+     .build{
+        /* display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: 1fr; */
+        width: 775px;
+        height: 1275px;
+    }
+    .welcomeAr1 {
+        display: grid;
+        width: 775px;
+        grid-row-start: 0;
+        grid-row-end: 1;    
+    }
+    .welcomeA1Item {
+        background-color: var(--main-color);
+        text-align: center;
+    }
+    .welcomeA1Item p {
+        width: 735px;
+        padding: 10px;
+        margin: 5px;
+    }
+    .welcomeAr2 {
+        background-color: var(--main-color2);
+        display: grid;
+        width: 775px;
+        text-align: center;
+    }
+    .welcomeA2Item p {
+        width: 735px;
+        padding: 10px;
+        margin: 5px;
+    }
+    .welcomeA2Item h3 {
+        font-size: 30px;
+        font-weight: 600;
+        padding-top: 10px;
+    }
+    .welcomeAr3 {
+        background-color: var(--main-color3);
+        display: grid;
+        width: 775px;
+        text-align: center;
+        padding-top: 10px;
+    }
+    .welcomeAr3 p {
+        width: 735px;
+        padding: 1%;
+        margin: 1%;
+    }
+    /* --------------------------------------------------------------------------------------------------------------------------- */
+    /* ---------------------------------------------------- Footer --------------------------------------------------------------- */
+    .footerContainer {
+        background-color: var(--footer-color);
+        width: 775px;
+        padding: 10px;
+        color: white;
+        text-align: center;
+    }
+    .footerContainer p{
+        margin: 10px;
+    }
+    .footerL{
+        width: 735px;
+        padding-top: 40px;
+    }
+    .footerM {
+        width: 735px;
+        padding: 20px;
+    }
+    .iFooterContainer{
+      width: 735px;
+      margin-top: 25.5%;
+      }
+    }
